--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
@@ -123,11 +123,11 @@
                 data: { id},
                         method: "POST",
                 success: function (result) {
-                    alert(result.message);
+                    swal("Xoá", result.message, "success");
                     RefreshNghiepDoanTable();
                 },
                 error: function (error) {
-                    alert(error.message);
+                    swal('Lỗi',error.message,'error');
                 }
             });
         }
