--- a/Vimas/Areas/HocVien/Views/ThongTinGiaDinh/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinGiaDinh/Create.cshtml
@@ -91,13 +91,13 @@
             url: '@Url.Action("Create","ThongTinGiaDinh")',
             data: formData,
             success: function (result) {
-                alert(result.message);
+                swal("Tạo mới", result.message, "success");
                 $('#createTTGDPanel').modal('hide');
                 $('#createTTGDPanel').html("");
                 RefreshTable('thongTinGiaDinhTable');
             },
             error: function (error) {
-                alert(result.message);
+                swal('Lỗi', error.message, 'error');
             }
         });
         }
