--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
@@ -107,13 +107,13 @@
                 url: '@Url.Action("Edit","ThongTinNopTien")',
                 data: formData,
                 success: function (result) {
-                    alert(result.message);
+                    swal("Chỉnh sửa", result.message, "success");
                     $('#editTTNTPanel').modal('hide');
                     $('#editTTNTPanel').html("");
                     RefreshTTNTTable();
                 },
                 error: function (error) {
-                    alert(result.message);
+                    swal('Lỗi', error.message, 'error');
                 }
             });
         }
