--- a/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
@@ -136,7 +136,7 @@
                 },
                 success: function (result) {
                     swal("Xoá", result.message, "success");
-                    RefreshTable('thongTinPhongVanTable');
+                    RefreshCongTyChungNgheTable();
                 },
                 error: function (error) {
                     swal('Lỗi',error.message,'error');
