--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Index.cshtml
@@ -153,13 +153,23 @@
     }
 
     function Delete(id) {
-        if (confirm("Bạn có chắc xóa dòng này?")) {
+        swal({
+            title: "Bạn có chắc xóa dòng này?",
+            type: "warning",
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: "Vâng, chắc chắn Xoá",
+            confirmButtonClass: 'btn btn-success',
+            cancelButtonText: "Không",
+            showCancelButton: true,
+            closeOnConfirm: false
+        }, function () {
             $.ajax({
+                type: "POST",
                 url: '@this.Url.Action("Delete")',
                 data: {
-                    id
-                    },
-                        method: "POST",
+                    id: id,
+                },
                 success: function (result) {
                     swal("Xoá", result.message, "success");
                     RefreshTable('DOLABDatatable');
@@ -168,6 +178,6 @@
                     swal('Lỗi',error.message,'error');
                 }
             });
-        }
+        });
     }
 </script>
