--- a/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
@@ -113,11 +113,23 @@
     }
 
     function Delete(id) {
-        if (confirm("Bạn có chắc xóa dòng này?")) {
+        swal({
+            title: "Bạn có chắc xóa dòng này?",
+            type: "warning",
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: "Vâng, chắc chắn Xoá",
+            confirmButtonClass: 'btn btn-success',
+            cancelButtonText: "Không",
+            showCancelButton: true,
+            closeOnConfirm: false
+        }, function () {
             $.ajax({
+                type: "POST",
                 url: '@this.Url.Action("Delete")',
-                data: { id},
-                        method: "POST",
+                data: {
+                    id: id,
+                },
                 success: function (result) {
                     swal("Xoá", result.message, "success");
                     window.location.href = "@this.Url.Action("Index")";
@@ -126,6 +138,6 @@
                     swal('Lỗi',error.message,'error');
                 }
             });
-        }
+        });
     }
 </script>
