--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -153,6 +153,9 @@
                                             <th>
                                                 <label class="">Từ năm - Đến năm</label>
                                             </th>
+                                            <th>
+                                                <label class=""></label>
+                                            </th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
