--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
@@ -71,6 +71,7 @@
             "bRetrieve": true,
             "bServerSide": true,
             "bScrollCollapse": true,
+            "responsive": true,
             "sAjaxSource": "@Url.Action("LoadDanhSachThongTin")",
             "bProcessing": true,
             "iDisplayLength": 10,
