--- a/Vimas/Views/Account/Login.cshtml
+++ b/Vimas/Views/Account/Login.cshtml
@@ -4,11 +4,14 @@
     ViewBag.Title = "Log in";
     Layout = null;
 }
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-<link href="~/Content/Site.css" rel="stylesheet" />
-<link href="~/Content/elegant-icons-style1.css" rel="stylesheet" />
-<link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
-<link href="~/Content/style-responsive.css" rel="stylesheet" />
+<head>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Content/elegant-icons-style1.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+    <link href="~/Content/style-responsive.css" rel="stylesheet" />
+    <title>Đăng nhập</title>
+</head>
 <body class="login-img3-body">
     <div class="container">
         <div class="login-form">
